--- a/views/manageDocument.html
+++ b/views/manageDocument.html
@@ -101,17 +101,17 @@
                                                    
                                                     <div class="form-group">
                                                       
-                                                            <input id="" name="videoTitle" type="text" class="form-control" placeholder="Video Title">
+                                                            <input id="vidTitle" name="videoTitle" type="text" class="form-control" placeholder="Video Title" required>
                                                         </div>
                                                         <div class="form-group" >
                                                       
-                                                            <input id="titleUser" name="cvc" type="text" class="form-control" placeholder="Video Url">
+                                                            <input id="vidUrl" name="cvc" type="url" class="form-control" placeholder="Video Url" required>
                                                         </div>
                                                      
                                                      
                                                     </div>
                                                     <div class="text-center custom-pro-edt-ds bottom-pad-button">
-                                                        <button id="addBtnDoc" type="button" class="btn addBtnDoc btn-ctl-bt waves-effect waves-light m-r-10 bg-green" >Upload   
+                                                        <button id="uploadVidBtn" type="button" class="btn addBtnDoc btn-ctl-bt waves-effect waves-light m-r-10 bg-green" >Upload   
                                                             </button>
                                                     </div>
                                                 </div>
@@ -154,30 +154,7 @@
                                 </form>
                             </div>
                             <table id="dom-input-doc">
-                                <tr>
-                                    <th>#</th>
-                                    <th>Title</th>
-                                    <th>Document</th>
-                                    <th>Size</th>
-                                    <th>Upload Date</th>
-                                    <th>View</th>
-                                    <th>Operations</th>
-                                </tr>
-                          
-                                    <tr>
-                                        <td>1</td>
-                                            <td>Product Title 1</td>
-                                            <td>
-                                            <p>  info.pdf</p>
-                                            </td>
-                                            <td>500kb</td>
-                                            <td>15/07/2020</td>
-                                            <td><img src="img/new-product/5-small.jpg" alt="" /></td>
-                                        
-                                            <td>
-                                                <button data-del="${x._id}" data-toggle="tooltip" title="Trash" class="pd-setting-ed delCartSel"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
-                                            </td>
-                                    </tr>
+                              
                                 
                             </table>
                         </div>
