--- a/views/admin.html
+++ b/views/admin.html
@@ -71,6 +71,9 @@
                                                                     <input class="pull-left privi" type="checkbox" data-privi="home" required><label class="font-white">&nbsp Home</label>
                                                                 </div>
                                                                 <div class="bt-df-checkbox adminCheck">
+                                                                    <input class="pull-left privi" type="checkbox" data-privi="admin" required><label class="font-white">&nbsp Admin</label>
+                                                                </div>
+                                                                <div class="bt-df-checkbox adminCheck">
                                                                     <input class="pull-left privi" type="checkbox" data-privi="tree"><label class="font-white">&nbsp Tree View</label>
                                                                 </div>
                                                                 <div class="bt-df-checkbox adminCheck">
