--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -666,7 +666,11 @@
                                     </li>
                                     <li><a data-toggle="collapse" data-target="#Tablesmob" href="#">Wallet<span class="admin-project-icon nalika-icon nalika-down-arrow"></span></a>
                                         <ul id="Tablesmob" class="collapse dropdown-header-top">
-                                            <li><a href="walle">Wallets</a>
+                                            <li><a href="walletInfo">WalletInfo</a>
+                                            </li>
+                                            <li><a href="fundManagement">Fund Management</a>
+                                            </li>
+                                            <li><a href="cashoutRequest">Cashout Request</a>
                                             </li>
                                            
                                         </ul>
