--- a/views/fundManagement.html
+++ b/views/fundManagement.html
@@ -95,7 +95,7 @@
                                                             </div>
                                                             <div class="text-center credit-card-custom office-pad-bottom">
                                                                 <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
-                                                                <button id="deductFundBtn" type="submit" class="btn btn-success btn-block ">Add Fund</button>
+                                                                <button id="deductFundBtn" type="submit" class="btn btn-success btn-block ">Deduct Fund</button>
                                                             </div>
                                                         </form>
                                                     </div>
