--- a/views/settings.html
+++ b/views/settings.html
@@ -179,7 +179,7 @@
                                                         <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
                                                         <input id="settingPhoneEdit" type="text" class="form-control" placeholder="">
                                                     </div>
-                                                    <label>Date Of Birth</label>
+                                                    <label>Account Name</label>
                                                       <div class="input-group mg-b-pro-edt">
                                                         <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
                                                         <input id="settingDOBEdit" type="text" class="form-control" placeholder="">
