--- a/views/fundManagement.html
+++ b/views/fundManagement.html
@@ -51,8 +51,8 @@
                                                                 <input name="userID" type="text" class="form-control" placeholder="" required>
                                                             </div>
                                                             <div class="form-group">
-                                                                <label for="email">Amount</label>
-                                                                <input name="account" name="name" type="text" class="form-control" placeholder="" required>
+                                                                <label for="amount">Amount</label>
+                                                                <input name="amount" type="number" class="form-control" placeholder="" required>
                                                             </div>
                                                             <div class="form-group">
                                                                 <label for="email">Reason</label>
@@ -85,8 +85,8 @@
                                                                 <input name="userID" type="text" class="form-control" placeholder="" required>
                                                             </div>
                                                             <div class="form-group">
-                                                                <label for="email">Amount</label>
-                                                                <input name="account" name="name" type="text" class="form-control" placeholder="" required>
+                                                                <label for="amount">Amount</label>
+                                                                <input name="amount" type="number" class="form-control" placeholder="" required>
                                                             </div>
                                                             <div class="form-group">
                                                                 <label for="email">Reason</label>
@@ -123,9 +123,9 @@
                                                                 <input name="userIdTo" type="text" class="form-control" placeholder="">
                                                             </div>
                                                             <div class="form-group">
-                                                                <label for="email">Amount</label>
-                                                                <input name="amount" type="text" class="form-control" placeholder="">
-                                                            </div>
+                                                                <label for="amount">Amount</label>
+                                                                <input name="amount" type="number" class="form-control" placeholder="" required>
+                                                            </div>  
                                                             <div class="form-group">
                                                                 <label for="email">Reason</label>
                                                               
