--- a/views/settings.html
+++ b/views/settings.html
@@ -182,7 +182,7 @@
                                                     <label>Account Name</label>
                                                       <div class="input-group mg-b-pro-edt">
                                                         <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
-                                                        <input id="settingDOBEdit" type="text" class="form-control" placeholder="">
+                                                        <input id="settingAccountNameEdit" type="text" class="form-control" placeholder="">
                                                     </div>
                                                     <label>Gender</label>
                                                     <div class="input-group mg-b-pro-edt">
@@ -192,7 +192,7 @@
                                                             <label>Bank Name</label>
                                                     <div class="input-group mg-b-pro-edt">
                                                         <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
-                                                        <input id="settingBankEdit" type="text" class="form-control" placeholder="">
+                                                        <input id="settingBankNameEdit" type="text" class="form-control" placeholder="">
                                                     </div>
                                                 
                                                 </div>
