--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -121,7 +121,7 @@
                           
                         </ul>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="has-arrow" href="general" aria-expanded="false"><i class="icon nalika-table icon-wrap"></i> <span class="mini-click-non">General</span></a>
                         <ul class="submenu-angle" aria-expanded="false">
                             <li><a title="Notification" href="notifications"><span class="mini-sub-pro">Notification</span></a></li>
@@ -129,7 +129,7 @@
                             
                           
                         </ul>
-                    </li>
+                    </li> -->
                     <li>
                         <a class="has-arrow" href="document" aria-expanded="false"><i class="icon nalika-table icon-wrap"></i> <span class="mini-click-non">Documents</span></a>
                         <ul class="submenu-angle" aria-expanded="false">
@@ -187,69 +187,9 @@
                                 <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
                                     <div class="header-right-info hideAtSmall hideAtTablet">
                                         <ul class="nav navbar-nav mai-top-nav header-right-menu">
-                                 <!--            <li class="nav-item dropdown">
-                                                <a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="nav-link dropdown-toggle"><i class="icon nalika-mail" aria-hidden="true"></i><span class="indicator-ms"></span></a>
-                                                <div role="menu" class="author-message-top dropdown-menu animated zoomIn">
-                                                    <div class="message-single-top">
-                                                        <h1>Message</h1>
-                                                    </div>
-                                                    <ul class="message-menu">
-                                                        <li>
-                                                            <a href="#">
-                                                                <div class="message-img">
-                                                                    <img src="img/contact/1.jpg" alt="">
-                                                                </div>
-                                                                <div class="message-content">
-                                                                    <span class="message-date">16 Sept</span>
-                                                                    <h2>Advanda</h2>
-                                                                    <p>Please done this project as soon possible.</p>
-                                                                </div>
-                                                            </a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="#">
-                                                                <div class="message-img">
-                                                                    <img src="img/contact/4.jpg" alt="">
-                                                                </div>
-                                                                <div class="message-content">
-                                                                    <span class="message-date">16 Sept</span>
-                                                                    <h2>Sulaiman din</h2>
-                                                                    <p>Please done this project as soon possible.</p>
-                                                                </div>
-                                                            </a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="#">
-                                                                <div class="message-img">
-                                                                    <img src="img/contact/3.jpg" alt="">
-                                                                </div>
-                                                                <div class="message-content">
-                                                                    <span class="message-date">16 Sept</span>
-                                                                    <h2>Victor Jara</h2>
-                                                                    <p>Please done this project as soon possible.</p>
-                                                                </div>
-                                                            </a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="#">
-                                                                <div class="message-img">
-                                                                    <img src="img/contact/2.jpg" alt="">
-                                                                </div>
-                                                                <div class="message-content">
-                                                                    <span class="message-date">16 Sept</span>
-                                                                    <h2>Victor Jara</h2>
-                                                                    <p>Please done this project as soon possible.</p>
-                                                                </div>
-                                                            </a>
-                                                        </li>
-                                                    </ul>
-                                                    <div class="message-view">
-                                                        <a href="#">View All Messages</a>
-                                                    </div>
-                                                </div>
-                                            </li> -->
-                                            <!-- <li class="nav-item"><a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="nav-link dropdown-toggle"><i class="icon nalika-alarm" aria-hidden="true"></i><span class="indicator-nt" style="font-size: smaller;font-weight: bolder;text-align: center;">2</span></a>
-                                                <div role="menu" class="notification-author dropdown-menu animated zoomIn">
+                                    
+                                            <li class="nav-item"><a href="/messageList"><i class="icon nalika-alarm" aria-hidden="true"></i><span class="indicator-nt" style="font-size: smaller;font-weight: bolder;text-align: center;">2</span></a>
+                                                <!-- <div role="menu" class="notification-author dropdown-menu animated zoomIn">
                                                     <div class="notification-single-top">
                                                         <h1>Notifications</h1>
                                                     </div>
@@ -288,11 +228,11 @@
                                                     <div class="notification-view">
                                                         <a href="#">View All Notification</a>
                                                     </div>
-                                                </div>
-                                            </li> -->
+                                                </div> -->
+                                            </li> 
                                             <li class="nav-item">
                                                 <a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="nav-link dropdown-toggle">
-                                                        <i class="icon nalika-user"></i>
+                                                      
                                                         <span class="admin-name">Admin Use</span>
                                                         <i class="icon nalika-down-arrow nalika-angle-dw"></i>
                                                     </a>
@@ -724,14 +664,14 @@
                                           
                                         </ul>
                                     </li>
-                                    <li><a data-toggle="collapse" data-target="#Pagegen" href="#">General<span class="admin-project-icon nalika-icon nalika-down-arrow"></span></a>
+                                    <!-- <li><a data-toggle="collapse" data-target="#Pagegen" href="#">General<span class="admin-project-icon nalika-icon nalika-down-arrow"></span></a>
                                         <ul id="Pagerep" class="collapse dropdown-header-top">
                                           
                                             <li><a href="general">General</a>
                                             </li>
                                           
                                         </ul>
-                                    </li>
+                                    </li> -->
                            <!--          data-toggle="collapse" data-target="#logout" -->
                                     <li><a  href="#" id="logoutOffice">Logout <span class="admin-project-icon nalika-icon nalika-down-arrow"></span></a>
                                        <!--  <ul id="logout" class="collapse dropdown-header-top">
