--- a/views/messageList.html
+++ b/views/messageList.html
@@ -111,6 +111,18 @@
                                     </div>
                                     <div class="table-responsive">
                                         <table class="table table-hover table-mailbox">
+                                             <tr>
+                                                        
+                                                            
+                                                        <th></th>
+                                                        <th>Sender</th>
+                                                        <th>Title</th>
+                                                        <th>Date</th>
+                                                        <th>View</th>
+                                                        <th>Delete</th>
+                                                       
+                                                   
+                                                    </tr>
                                             <tbody id="messageDom">
 
                                             </tbody>
