--- a/views/userAccount.html
+++ b/views/userAccount.html
@@ -49,9 +49,9 @@
                                     <li class="active"><a href="#description">Password Change</a> </li>
                                     <li><a href="#reviews">Username Change</a></li>
                                     <li><a href="#INFORMATION">Email Change</a></li>
-                                  
                                     <li><a href="#INFORMATION2">Transaction Password</a></li>
                                     <li><a href="#INFORMATION3">Enable/Disable User</a></li>
+                                    <li><a href="#ChangeBankDetails">Change Bank Details</a></li>
                                 </ul>
                                 <div id="myTabContent" class="tab-content custom-product-edit">
                                     <div class="product-tab-list tab-pane fade active in" id="description">
@@ -227,7 +227,47 @@
                                 
                                     </div>
 
-                                     
+                                           <div class="product-tab-list tab-pane fade" id="ChangeBankDetails">
+                                        <div class="row container">
+                                            <div class="col-lg-3"></div>
+                                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                                <div class="review-content-section">
+                                                    <div class="demo-container">
+                                                        <div class="card-wrapper"></div>
+                                                        <form class="payment-form mg-t-30 form-border-input-show text-white-label ">
+
+                                                            <div class="form-group">
+                                                                <label for="email">User ID</label>
+                                                                <input id="userId_bankDetail" name="cvc" type="text" class="form-control" placeholder="">
+                                                            </div>
+
+                                                            <div class="form-group">
+                                                                <label for="email">Account Number</label>
+                                                                <input id="accountNumber" name="cvc" type="text" class="form-control" placeholder="">
+                                                            </div>
+                                                             <div class="form-group">
+                                                                <label for="email">Bank Account Name</label>
+                                                                <input id="bankAccountName" name="cvc" type="text" class="form-control" placeholder="">
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <label for="email">Bank Account Type</label>
+                                                                <input id="bankAccountType" name="cvc" type="text" class="form-control" placeholder="">
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <label for="email">Bank Name</label>
+                                                                <input id="bankName" name="cvc" type="text" class="form-control" placeholder="">
+                                                            </div>
+                                                          
+                                                            <div class="text-center credit-card-custom office-pad-bottom">
+                                                                <button id="updateBankDetailsBtn" type="button" class="btn btn-success btn-block ">Update</button>
+                                                            </div>
+                                                        </form>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-3"></div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
